--- a/notebooks/03_ml_train_quality_eval.ipynb
+++ b/notebooks/03_ml_train_quality_eval.ipynb
@@ -143,43 +143,48 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# CELL 6: Feature Engineering (Training Set)\n",
-        "print(\"\\nPerforming feature engineering...\")\n",
+        "# CELL 6: Advanced Feature Engineering & Cleaning (Training Set)\n",
+        "print(\"\\nPerforming Advanced Feature Engineering & Cleaning...\")\n",
         "\n",
-        "# 1. Sort Data (PENTING!)\n",
+        "# 1. SORT DATA (Wajib)\n",
         "if 'trip_id' in df.columns:\n",
         "    df = df.sort_values(['trip_id', 'seconds_elapsed'])\n",
         "else:\n",
         "    df = df.sort_values('seconds_elapsed')\n",
         "\n",
-        "# 2. Previous Speed (Lag Features)\n",
-        "# Kita pakai groupby trip_id agar tidak mencampur data antar trip\n",
+        "# 2. REPAIR DATA (Jika speed rusak/0 semua)\n",
+        "if df['speed_mps'].mean() < 0.1 and 'position_lat' in df.columns:\n",
+        "    print(\"⚠️ Speed data broken. Recalculating from GPS coords...\")\n",
+        "    # Simple Euclidean distance approx\n",
+        "    df['d_lat'] = df.groupby('trip_id')['position_lat'].diff().fillna(0)\n",
+        "    df['d_lon'] = df.groupby('trip_id')['position_long'].diff().fillna(0)\n",
+        "    df['calc_dist'] = np.sqrt(df['d_lat']**2 + df['d_lon']**2) * 111000 \n",
+        "    df['speed_mps'] = df['calc_dist'].rolling(window=3, center=True).mean().fillna(0)\n",
+        "\n",
+        "# 3. FEATURE ENGINEERING\n",
+        "# A. Basic Lag Features\n",
         "grouper = df.groupby('trip_id')['speed_mps'] if 'trip_id' in df.columns else df['speed_mps']\n",
         "df['speed_mps_prev1'] = grouper.shift(1).fillna(0)\n",
         "df['speed_mps_prev2'] = grouper.shift(2).fillna(0)\n",
+        "df['accel_prev1'] = (df['speed_mps_prev1'] - df['speed_mps_prev2']).fillna(0)\n",
         "\n",
-        "# 3. Calculate Accel Features (FIXED VARIABLE NAME)\n",
-        "# Accel sekarang = Speed t - Speed t-1\n",
-        "df['accel_from_speed'] = df['speed_mps'] - df['speed_mps_prev1']\n",
+        "# B. Rolling Features (Trend 5 detik) - AGAR GRAFIK TIDAK PATAH-PATAH\n",
+        "# Shift(1) dulu baru rolling agar tidak bocor\n",
+        "roll_src = grouper.shift(1)\n",
+        "df['speed_roll_mean_5s'] = roll_src.rolling(5, min_periods=1).mean().fillna(0)\n",
+        "df['speed_roll_std_5s'] = roll_src.rolling(5, min_periods=1).std().fillna(0)\n",
         "\n",
-        "# Accel masa lalu (t-1) = Speed t-1 - Speed t-2\n",
-        "grouper_accel = df.groupby('trip_id')['accel_from_speed'] if 'trip_id' in df.columns else df['accel_from_speed']\n",
-        "df['accel_prev1'] = grouper_accel.shift(1).fillna(0)\n",
-        "\n",
-        "# 4. Delta/Distance Features (Static)\n",
-        "if 'position_lat' in df.columns and 'position_long' in df.columns:\n",
-        "    if 'trip_id' in df.columns:\n",
-        "        df['delta_lat'] = df.groupby('trip_id')['position_lat'].diff().fillna(0)\n",
-        "        df['delta_lon'] = df.groupby('trip_id')['position_long'].diff().fillna(0)\n",
-        "    else:\n",
-        "        df['delta_lat'] = df['position_lat'].diff().fillna(0)\n",
-        "        df['delta_lon'] = df['position_long'].diff().fillna(0)\n",
-        "    # Euclidean approx (cukup untuk fitur ML, kalau mau akurat pakai Haversine/Geopy)\n",
-        "    df['delta_dist'] = np.sqrt(df['delta_lat']**2 + df['delta_lon']**2)\n",
+        "# C. Segment Context (Agar model tau ini jalan ngebut/pelan)\n",
+        "if 'segment_id' in df.columns:\n",
+        "    df['segment_avg_speed'] = df.groupby('segment_id')['speed_mps'].transform('mean')\n",
         "else:\n",
-        "    df['delta_lat'] = 0; df['delta_lon'] = 0; df['delta_dist'] = 0\n",
+        "    # Fallback: Expanding mean\n",
+        "    if 'trip_id' in df.columns:\n",
+        "        df['segment_avg_speed'] = df.groupby('trip_id')['speed_mps'].expanding().mean().reset_index(0, drop=True)\n",
+        "    else:\n",
+        "        df['segment_avg_speed'] = df['speed_mps'].expanding().mean()\n",
         "\n",
-        "# 5. Other Static Features\n",
+        "# D. Map Features\n",
         "if 'enhanced_altitude' in df.columns:\n",
         "    grouper_alt = df.groupby('trip_id')['enhanced_altitude'] if 'trip_id' in df.columns else df['enhanced_altitude']\n",
         "    df['elev_gain_m'] = grouper_alt.diff().fillna(0)\n",
@@ -190,15 +195,34 @@
         "    traffic_map = {'heavy': 2, 'moderate': 1, 'light': 0}\n",
         "    df['traffic_level'] = df['label_traffic'].map(traffic_map).fillna(1)\n",
         "else:\n",
-        "    df['traffic_level'] = 1\n",
+        "    df['traffic_level'] = 1 \n",
         "\n",
-        "if 'bearing' not in df.columns: df['bearing'] = 0\n",
-        "grouper_bear = df.groupby('trip_id')['bearing'] if 'trip_id' in df.columns else df['bearing']\n",
-        "df['heading_change'] = grouper_bear.diff().fillna(0)\n",
-        "df['turn_count'] = (np.abs(df['heading_change']) > 15).astype(int)\n",
+        "if 'position_lat' in df.columns:\n",
+        "    if 'trip_id' in df.columns:\n",
+        "        df['delta_lat'] = df.groupby('trip_id')['position_lat'].diff().fillna(0)\n",
+        "        df['delta_lon'] = df.groupby('trip_id')['position_long'].diff().fillna(0)\n",
+        "    else:\n",
+        "        df['delta_lat'] = df['position_lat'].diff().fillna(0)\n",
+        "        df['delta_lon'] = df['position_long'].diff().fillna(0)\n",
+        "    df['delta_dist'] = np.sqrt(df['delta_lat']**2 + df['delta_lon']**2)\n",
+        "else:\n",
+        "    df['delta_lat']=0; df['delta_lon']=0; df['delta_dist']=0\n",
+        "\n",
+        "if 'bearing' in df.columns:\n",
+        "    grouper_bear = df.groupby('trip_id')['bearing'] if 'trip_id' in df.columns else df['bearing']\n",
+        "    df['heading_change'] = grouper_bear.diff().fillna(0)\n",
+        "    df['turn_count'] = (np.abs(df['heading_change']) > 15).astype(int)\n",
+        "else:\n",
+        "    df['heading_change']=0; df['turn_count']=0\n",
         "\n",
         "df = df.fillna(0)\n",
-        "print(\"✅ Feature engineering complete (Training)\")"
+        "\n",
+        "# 4. FILTER STATIONARY (PENTING AGAR TIDAK FLATLINE)\n",
+        "print(f\"Original Rows: {len(df)}\")\n",
+        "df = df[df['speed_mps'] > 0.5] # Buang data parkir\n",
+        "print(f\"✅ Filtered (Moving) Rows: {len(df)}\")\n",
+        "\n",
+        "print(\"✅ Advanced Feature Engineering Complete.\")"
       ]
     },
     {
@@ -254,30 +278,25 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# CELL 7: Prepare Training Data (YOUR FEATURES)\n",
+        "# CELL 7: Prepare Training Data\n",
         "feature_cols = [\n",
-        "    'enhanced_altitude', 'bearing',\n",
         "    'speed_mps_prev1', 'speed_mps_prev2', 'accel_prev1',\n",
+        "    'speed_roll_mean_5s', 'speed_roll_std_5s', # NEW\n",
+        "    'segment_avg_speed',                       # NEW\n",
+        "    'enhanced_altitude', 'bearing', \n",
         "    'delta_dist', 'delta_lat', 'delta_lon',\n",
-        "    'elev_gain_m', 'traffic_level',\n",
+        "    'elev_gain_m', 'traffic_level', \n",
         "    'heading_change', 'turn_count'\n",
         "]\n",
         "\n",
-        "# Ensure all features exist\n",
-        "missing = [c for c in feature_cols if c not in df.columns]\n",
-        "if missing:\n",
-        "    print(f\"⚠️  Warning: Missing columns {missing}. Creating with zeros.\")\n",
-        "    for col in missing:\n",
-        "        df[col] = 0\n",
+        "# Ensure cols exist\n",
+        "for c in feature_cols:\n",
+        "    if c not in df.columns: df[c] = 0\n",
         "\n",
         "X = df[feature_cols].values\n",
         "y_speed = df['speed_mps'].values\n",
-        "y_accel = df['accel_from_speed'].values \n",
         "\n",
-        "print(f\"\\n✅ Training data prepared:\")\n",
-        "print(f\"   X shape: {X.shape}\")\n",
-        "print(f\"   y_speed shape: {y_speed.shape}\")\n",
-        "print(f\"   Features: {feature_cols}\")"
+        "print(f\"✅ Features: {feature_cols}\")"
       ]
     },
     {
@@ -327,8 +346,8 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# CELL 10: Define 5 Core Models (Optimized for Speed Prediction)\n",
-        "print(\"Defining 5 core models with optimized parameters...\")\n",
+        "# CELL 10: Define 5 Core Models (Environment Compatible)\n",
+        "print(\"Defining 5 core models (XGBoost using MAE objective)...\")\n",
         "\n",
         "from sklearn.ensemble import RandomForestRegressor\n",
         "from sklearn.tree import DecisionTreeRegressor\n",
@@ -337,34 +356,34 @@
         "import xgboost as xgb\n",
         "\n",
         "models = {\n",
-        "    # 1. RANDOM FOREST (Baseline Kuat)\n",
+        "    # 1. RANDOM FOREST (Baseline)\n",
         "    'RandomForest': RandomForestRegressor(\n",
         "        n_estimators=300,\n",
-        "        max_depth=25,        # Cukup dalam untuk pola kompleks\n",
-        "        min_samples_leaf=2,  # Sedikit regularization\n",
+        "        max_depth=30,        # Deep trees to capture variance\n",
+        "        min_samples_leaf=2,  \n",
         "        min_samples_split=5,\n",
         "        random_state=42,\n",
         "        n_jobs=-1\n",
         "    ),\n",
         "\n",
-        "    # 2. DECISION TREE (Simple tapi Berani)\n",
+        "    # 2. DECISION TREE (Simple)\n",
         "    'DecisionTree': DecisionTreeRegressor(\n",
         "        max_depth=20,\n",
         "        min_samples_leaf=4,\n",
         "        random_state=42\n",
         "    ),\n",
         "\n",
-        "    # 3. SVR (Support Vector Regression) - Butuh Scaled Data\n",
+        "    # 3. SVR (Support Vector)\n",
         "    'SVR': SVR(\n",
-        "        C=100,           # Agresif (fitting ketat)\n",
+        "        C=100,           # High regularization C for aggressive fitting\n",
         "        gamma=0.1,       \n",
-        "        epsilon=0.01,    # Presisi tinggi\n",
+        "        epsilon=0.01,    \n",
         "        kernel='rbf'\n",
         "    ),\n",
         "\n",
-        "    # 4. ANN (Neural Network) - Butuh Scaled Data\n",
+        "    # 4. ANN (Neural Network)\n",
         "    'ANN': MLPRegressor(\n",
-        "        hidden_layer_sizes=(128, 64, 32), # Sedikit lebih deep\n",
+        "        hidden_layer_sizes=(128, 64, 32), \n",
         "        activation='relu',\n",
         "        alpha=0.0001,\n",
         "        learning_rate_init=0.001,\n",
@@ -375,21 +394,21 @@
         "    )\n",
         "}\n",
         "\n",
-        "# 5. XGBOOST (The King)\n",
+        "# 5. XGBOOST (Compatible & Robust)\n",
         "if HAS_XGB:\n",
         "    models['XGBoost'] = xgb.XGBRegressor(\n",
-        "        n_estimators=500,\n",
+        "        objective='reg:absoluteerror',\n",
+        "        n_estimators=600,\n",
         "        learning_rate=0.05,\n",
-        "        max_depth=8,            # Lebih dalam biar pinter\n",
+        "        max_depth=8,            \n",
         "        subsample=0.8,\n",
         "        colsample_bytree=0.9,\n",
         "        reg_alpha=0.1,\n",
         "        reg_lambda=1.0,\n",
-        "        objective='reg:absoluteerror', # Fokus meminimalkan MAE (lebih robust)\n",
         "        n_jobs=-1,\n",
         "        random_state=42\n",
         "    )\n",
-        "    print(f\"✅ {len(models)} models defined (including XGBoost)\")\n",
+        "    print(f\"✅ {len(models)} models defined (including XGBoost MAE)\")\n",
         "else:\n",
         "    print(f\"✅ {len(models)} models defined (XGBoost skipped)\")\n",
         "\n",
@@ -403,28 +422,29 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# CELL 11: Training Loop (With Scaling Logic)\n",
+        "# CELL 11: Training Loop (Smart Scaling)\n",
         "print(\"\\n=== STARTING TRAINING LOOP ===\")\n",
         "\n",
         "results = []\n",
         "trained_models = {}\n",
         "\n",
-        "# Pastikan target adalah 1D array\n",
+        "# Pastikan target 1D array\n",
         "y_train_flat = y_speed_train.ravel()\n",
         "\n",
         "for name, model in models.items():\n",
         "    print(f\"\\n🚀 Training: {name}\")\n",
         "    \n",
-        "    # LOGIKA SCALING (PENTING!)\n",
-        "    # SVR dan ANN wajib pake data scaled. Tree-based lebih bagus raw.\n",
+        "    # --- LOGIKA SCALING (CRITICAL) ---\n",
+        "    # SVR dan ANN (Neural Network) SANGAT butuh data scaled (-1 s/d 1)\n",
+        "    # Tree-based (RF, DT, XGB) seringkali lebih bagus pakai data asli (biar tau angka real)\n",
         "    if name in ['SVR', 'ANN']:\n",
         "        X_tr = X_train_scaled\n",
         "        X_v  = X_val_scaled\n",
-        "        print(\"   -> Using SCALED data\")\n",
+        "        print(\"   -> Using SCALED data (StandardScaler)\")\n",
         "    else:\n",
         "        X_tr = X_train\n",
         "        X_v  = X_val\n",
-        "        print(\"   -> Using RAW data\")\n",
+        "        print(\"   -> Using RAW data (Original Units)\")\n",
         "    \n",
         "    # Train\n",
         "    model.fit(X_tr, y_train_flat)\n",
@@ -437,7 +457,7 @@
         "    rmse = np.sqrt(mean_squared_error(y_speed_val, y_pred))\n",
         "    mae = mean_absolute_error(y_speed_val, y_pred)\n",
         "    \n",
-        "    # Simpan\n",
+        "    # Simpan Hasil\n",
         "    results.append({\n",
         "        'Model': name,\n",
         "        'R²': r2,\n",
@@ -447,7 +467,7 @@
         "    trained_models[name] = model\n",
         "    \n",
         "    print(f\"   R²   : {r2:.4f}\")\n",
-        "    print(f\"   RMSE : {rmse:.4f} m/s\")\n"
+        "    print(f\"   RMSE : {rmse:.4f} m/s\")"
       ]
     },
     {
@@ -458,7 +478,6 @@
       "source": [
         "# CELL 12: Select Best Model (by RMSE, like your original)\n",
         "df_results = pd.DataFrame(results).sort_values('RMSE').reset_index(drop=True)\n",
-        "\n",
         "\n",
         "\n",
         "best_name = df_results.iloc[0]['Model']\n",
