update metrics accel

--- a/notebooks/08_ml_validate_quality_with_emissions.ipynb
+++ b/notebooks/08_ml_validate_quality_with_emissions.ipynb
@@ -795,11 +795,12 @@
     }
    ],
    "source": [
-    "# CELL 9: Metrics Calculation with Bias Correction (Scaling)\n",
-    "print(\"\\n=== GENERATING ENHANCED METRICS (With Bias Correction) ===\")\n",
+    "# CELL 9: Metrics Calculation with Bias Correction & Explicit Acceleration Scoring\n",
+    "print(\"\\n=== GENERATING ENHANCED METRICS ===\")\n",
     "\n",
     "from scipy.ndimage import gaussian_filter1d\n",
     "from sklearn.metrics import r2_score, mean_squared_error, mean_absolute_error\n",
+    "import numpy as np\n",
     "\n",
     "# 1. Tentukan Traffic Split (25 km/h)\n",
     "SPEED_THRESH_MPS = 25.0 / 3.6\n",
@@ -824,20 +825,23 @@
     "    real_speed_ms = gaussian_filter1d(raw_real_speed_ms, sigma=2.0)\n",
     "    real_speed_kmh = real_speed_ms * 3.6\n",
     "    \n",
-    "    # Hitung Real Accel dari speed yang sudah halus\n",
+    "    # Hitung Real Accel (Ground Truth) dari Speed yang sudah halus\n",
+    "    # Kita pakai gradient agar konsisten (Speed t - Speed t-1)\n",
     "    real_acc_ms2 = np.gradient(real_speed_ms)\n",
     "\n",
     "    # --- B. DATA PREPARATION (PREDICTED + BIAS CORRECTION) ---\n",
     "    raw_pred_speed_ms = df_group['predicted_speed'].values\n",
     "    \n",
-    "    # 1. Bias Correction yang Lebih Lembut (Soft Scaling)\n",
-    "    bias_factor = 1.0 # No Scaling\n",
+    "    # Bias Correction (Soft Scaling)\n",
+    "    mean_real = np.mean(real_speed_ms)\n",
+    "    mean_pred = np.mean(raw_pred_speed_ms) + 1e-6 \n",
+    "    bias_factor = 1.0 # Default (bisa diubah jika perlu scaling)\n",
     "    \n",
-    "    # 2. Terapkan Scaling\n",
+    "    # Terapkan Scaling\n",
     "    pred_speed_ms = raw_pred_speed_ms * bias_factor\n",
     "    pred_speed_kmh = pred_speed_ms * 3.6\n",
     "    \n",
-    "    # 3. Hitung Accel dari Speed yang sudah dikoreksi\n",
+    "    # Hitung Predicted Accel dari Predicted Speed\n",
     "    pred_acc_ms2 = np.gradient(pred_speed_ms)\n",
     "    \n",
     "    print(f\"   -> Applied Bias Correction: x{bias_factor:.2f}\")\n",
@@ -852,19 +856,26 @@
     "    vsp_dist_real = get_distribution(vsp_real, vsp_bins)\n",
     "    vsp_dist_pred = get_distribution(vsp_pred, vsp_bins)\n",
     "\n",
-    "    # --- E. STATS & METRICS ---\n",
+    "    # --- E. STATS & METRICS (SPEED) ---\n",
     "    speed_rmse = np.sqrt(mean_squared_error(real_speed_kmh, pred_speed_kmh))\n",
     "    speed_r2 = r2_score(real_speed_kmh, pred_speed_kmh)\n",
+    "    speed_mae = mean_absolute_error(real_speed_kmh, pred_speed_kmh)\n",
     "    \n",
-    "    # Safety MAPE\n",
     "    safe_real = np.where(real_speed_kmh < 1, 1, real_speed_kmh)\n",
     "    speed_mape = np.mean(np.abs((real_speed_kmh - pred_speed_kmh) / safe_real)) * 100\n",
     "    \n",
+    "    # --- F. STATS & METRICS (ACCELERATION) - BAGIAN YANG DIPERBAIKI ---\n",
+    "    # Menghitung R2, RMSE, MAE untuk Akselerasi\n",
+    "    accel_r2 = r2_score(real_acc_ms2, pred_acc_ms2)\n",
+    "    accel_rmse = np.sqrt(mean_squared_error(real_acc_ms2, pred_acc_ms2))\n",
+    "    accel_mae = mean_absolute_error(real_acc_ms2, pred_acc_ms2)\n",
+    "\n",
+    "    # VSP RMSE\n",
     "    vsp_rmse_dist = np.sqrt(np.mean((vsp_dist_real - vsp_dist_pred)**2))\n",
     "    \n",
-    "    # Store Metrics (PASTIKAN SEMUA KEY ADA)\n",
+    "    # --- G. STORE METRICS ---\n",
     "    metrics[label] = {\n",
-    "        # -- Comparison Stats --\n",
+    "        # Comparison Stats\n",
     "        \"avg_speed_real_kmh\": float(np.mean(real_speed_kmh)),\n",
     "        \"avg_speed_synthetic_kmh\": float(np.mean(pred_speed_kmh)),\n",
     "        \"speed_difference_kmh\": float(abs(np.mean(real_speed_kmh) - np.mean(pred_speed_kmh))),\n",
@@ -873,7 +884,6 @@
     "        \"avg_accel_synthetic_ms2\": float(np.mean(pred_acc_ms2)),\n",
     "        \"accel_difference_ms2\": float(abs(np.mean(real_acc_ms2) - np.mean(pred_acc_ms2))),\n",
     "        \n",
-    "        # KEY YANG HILANG SEBELUMNYA (Sekarang sudah ada)\n",
     "        \"std_speed_real_kmh\": float(np.std(real_speed_kmh)),\n",
     "        \"std_speed_synthetic_kmh\": float(np.std(pred_speed_kmh)),\n",
     "        \"std_accel_real_ms2\": float(np.std(real_acc_ms2)),\n",
@@ -882,12 +892,18 @@
     "        \"vsp_rmse\": float(vsp_rmse_dist),\n",
     "        \"test_sample_size_sec\": int(len(df_group)),\n",
     "\n",
-    "        # -- Regression Metrics --\n",
+    "        # Detailed Metrics (Speed)\n",
     "        \"speed_r2\": float(speed_r2),\n",
     "        \"speed_rmse_kmh\": float(speed_rmse),\n",
+    "        \"speed_mae_kmh\": float(speed_mae),\n",
     "        \"speed_mape_percent\": float(speed_mape),\n",
     "        \n",
-    "        # -- Raw Data for Plotting --\n",
+    "        # Detailed Metrics (Acceleration) - NOW POPULATED\n",
+    "        \"accel_r2\": float(accel_r2),\n",
+    "        \"accel_rmse_ms2\": float(accel_rmse),\n",
+    "        \"accel_mae_ms2\": float(accel_mae),\n",
+    "        \n",
+    "        # Raw Data for Plotting\n",
     "        \"_raw_data\": {\n",
     "            \"speed_dist_real\": speed_dist_real,\n",
     "            \"speed_dist_pred\": speed_dist_pred,\n",
@@ -902,7 +918,9 @@
     "    \"details\": {k: {m: v for m, v in val.items() if not m.startswith('_')} for k, val in metrics.items()}\n",
     "}\n",
     "\n",
-    "print(f\"\\n✅ Metrics Calculated. Overall VSP RMSE: {final_output['overall'].get('vsp_rmse', 0):.4f}\")"
+    "print(f\"\\n✅ Metrics Calculated.\")\n",
+    "print(f\"   Overall VSP RMSE: {final_output['overall'].get('vsp_rmse', 0):.4f}\")\n",
+    "print(f\"   Overall Accel R2: {final_output['overall'].get('accel_r2', 0):.4f}\")"
    ]
   },
   {
