fix salah column name

--- a/notebooks/06_movestar.ipynb
+++ b/notebooks/06_movestar.ipynb
@@ -209,13 +209,39 @@
         "    # --- MODIFICATION START: Readable Output ---\n",
         "    \n",
         "    # 1. Format Emission Rate (Total Grams)\n",
-        "    outputcol_rate = 'CO(g),HC(g),NOx(g),PM2.5_Ele(g),PM2.5_Org(g),Energy(KJ),CO2(g),Fuel(g),TT(s)'\n",
-        "    outputcol_rate = outputcol_rate.split(',')\n",
-        "    output_val_rate = np.append(Ems_sum, tt)\n",
+        "    outputcol_rate = [\n",
+        "        \"Output\",\n",
+        "        \"CO\",\n",
+        "        \"HC\",\n",
+        "        \"NOx\",\n",
+        "        \"PM2.5 Elementary Carbon\",\n",
+        "        \"PM2.5 Organic Carbon\",\n",
+        "        \"Energy\",\n",
+        "        \"CO2\",\n",
+        "        \"Fuel\",\n",
+        "        \"Travel Time\",\n",
+        "        \"Travel Distance\",\n",
+        "    ]\n",
+        "    travel_distance_mi = td / c1 if td > 0 else 0\n",
+        "    output_val_rate = [\"Emission Rate\"]\n",
+        "    output_val_rate.extend(Ems_sum.tolist())\n",
+        "    output_val_rate.extend([tt, travel_distance_mi])\n",
         "    \n",
         "    dfER = pd.DataFrame([output_val_rate], columns=outputcol_rate)\n",
-        "    # Use to_dict with 'records' to get key-value pairs, [0] to get the object out of the list\n",
-        "    outputres[\"Emission Rate\"] = dfER.to_dict(orient='records')[0] \n",
+        "    outputres[\"Emission Rate\"] = dfER.to_dict(orient='records')[0]\n",
+        "    outputres[\"Units\"] = {\n",
+        "        \"Output\": \"Unit\",\n",
+        "        \"CO\": \"g\",\n",
+        "        \"HC\": \"g\",\n",
+        "        \"NOx\": \"g\",\n",
+        "        \"PM2.5 Elementary Carbon\": \"g\",\n",
+        "        \"PM2.5 Organic Carbon\": \"g\",\n",
+        "        \"Energy\": \"KJ\",\n",
+        "        \"CO2\": \"g\",\n",
+        "        \"Fuel\": \"g\",\n",
+        "        \"Travel Time\": \"s\",\n",
+        "        \"Travel Distance\": \"mi\",\n",
+        "    }\n",
         "    \n",
         "    # 2. Format Emission Factor (Grams per Mile) - Optional but recommended\n",
         "    outputcol_fac = 'CO(g/mi),HC(g/mi),NOx(g/mi),PM2.5_Ele(g/mi),PM2.5_Org(g/mi),Energy(KJ/mi),CO2(g/mi),Fuel(g/mi),TD(mi)'\n",
